[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["gavin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
criterion = "0.3.3"
lazy_static = "1.4"

[lib]
name = "puzzles"
path = "src/puzzles/mod.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true